경북대 BE_정성훈_2주차 과제(2~3단계) (#347)
* chore: implementation spring-boot-starter-validation

* chore: 테스트 코드 제거, 추후 재작성

* docs: 2주차 step1 요구사항 정리

* refactor: product_id -> productId java convention

* feat: 상품 이름에 허용된 특수문자만이 있는지 유효성 검사하는 annotation, validator 구현

* feat: 상품 이름에 "카카오" 단어가 있는지 유효성 검사하는 annotation, validator 구현

* refactor: Product에 유효성 검사를 위한 코드 추가

* feat: MethodArgumentNotValidException 처리위한 ExceptionHandler구현, ProblemDetail 반환
- 발생한 필드 에러의 메세지를 추출해서 ProblemDetail property 에 set하여 api 사용자에게 구체적인 문제사항 반환

* test: Product의 name에 대한 유효성을 테스트하기 위한 코드

* refactor: ProblemDetail의 propety 수정 및 추가

* chore: 안쓰는 테스트코드 제거

* refactor: 더 깔끔히게 코드 리팩토링

* refactor: 의존관계 주입 방식 변경

* refactor: @Size같은 기존의 애너테이션 포맷과 통일

* refactor: ProductDB를 ProductRepository 라는이름으로 변경

* refactor: ResponseProductId를 ProductId 라는이름으로 변경, 패키지 변경

* refactor: admin page에서도 유효성 검사가 이루어지도록 수정했습니다.

- 패키지변경으로인한 변경사항도 적용됨

* refactor: PUT에서 수정과 생성 모두 실패할 시 NOT IMPLEMENTED가 아닌 INTERNAL SERVER ERROR로 변경

* refactor: collect(Collectors.toList()) -> toList();

* test: 중복된 코드 합침. `private` 달음

* fix: AdminGlobalExceptionHandler가 rest api의 예외도 처리해서 이를 방지하기위해 `@ControllerAdvice(basePackages = "gift.controller.admin")`
베이스 패키지 설정

* chore: 과제 제출 위함

* feat: 회원가입시 이메일 중복 거리는 기능

* refactor: ProductRestController->ProductController

* refactor: ProductRestController->ProductController영향들

* feat: 위시리스트 삼품목록 조회, 상품 삭제, 상품 추가 기능 구현

* refactor: ProductService계층 추가. 이로 인한 변경사항들

* docs: 2단계 요구사항정리

* docs: 3단계 요구사항정리

* chore: h2 db console setting

* feat: token 관련 기능 구현

* refactor: wishList에 상품 개수 열 추가. 이에 따른 코드 리팩토링

* refactor: wishList에 amount 추가에 따른 후속 조치

* feat: Intercept 구현 성공. header의 Authorization 으로 토큰 받음

* refactor: dto이름 변경에 따른 후속 조치

* refactor: MemberRequest 적용

* test: 인증인터셉터 테스트

* test: 멤버 컨트롤러 테스트

* test: 전역 테스트시 충돌 방지위한 Mock설정파일

* chore: 테스트 코드 제거, 추후 재작성

* refactor: product_id -> productId jav